se movieron de ubicacion por error de rutas

--- a/Marcona-frontend/src/index.css
+++ b/Marcona-frontend/src/index.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+  --color-marcona-500: #0471e6; /* Define aquí tu azul personalizado */
+}
