se eilimino porque hacia un cruce con los estilos

--- a/Marcona-frontend/src/index.css
+++ b/Marcona-frontend/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
 @theme {
-  --color-marcona-500: #0471e6; /* Define aquí tu azul personalizado */
+  --color-marcona-500: #0471e6;
 }
